--- a/14. SMOTE.ipynb
+++ b/14. SMOTE.ipynb
@@ -170,8 +170,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1. SMOTE를 통해서 $S_{min}$ 데이터들에 대한 합성 데이터를 생성할 수 있음을 확인 가능\n",
-    "#### 2. BorderlineSMOTE를 통해서는 결정 경계에 중요한 영향을 미치는 데이터만 선별, 합성 데이터를 생성가능함을 확인"
+    "- SMOTE를 통해서 $S_{min}$ 데이터들에 대한 합성 데이터를 생성할 수 있음을 확인 가능\n",
+    "- BorderlineSMOTE를 통해서는 결정 경계에 중요한 영향을 미치는 데이터만 선별, 합성 데이터를 생성가능함을 확인"
    ]
   }
  ],
