--- a/Latent Dirichlet Allocation.ipynb
+++ b/Latent Dirichlet Allocation.ipynb
@@ -9,12 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from collections import Counter"
    ]
   },
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,68 +48,34 @@
     "    [\"실적\", \"이자\", \"비은행\", \"은행\", \"대출\", \"증권\",\"비이자\"],\n",
     "    [\"바이오시밀러\", \"코로나\", \"바이러스\", \"백신\", \"수익성\", \"바이오\"],\n",
     "    [\"5G\", \"이동통신\", \"매출\", \"이익\", \"커머스\", \"지주\"],\n",
-    "    [\"스마트팩토리\", \"수익률\", \"통신\", \"5G\", \"IPTV\"],\n",
+    "    [\"스마트팩토리\", \"수익률\", \"통신\", \"IPTV\"],\n",
+    "    [\"GDP\", \"운용자산\", \"M&A\", \"코로나\", \"금리\", \"중앙은행\"],\n",
     "    [\"IPTV\", \"턴어라운드\", \"5G\", \"이익\", \"인터넷\", \"통신\"],\n",
     "    [\"반도체\", \"인공지능\", \"IP\", \"플랫폼\", \"칩\", \"자율주행\"],\n",
-    "    [\"원자현미경\", \"공정\", \"반도체\", \"성장\", \"수익성\", \"디스플레이\"]]"
+    "    [\"원자현미경\", \"공정\", \"반도체\", \"성장\", \"수익성\", \"디스플레이\"],\n",
+    "    [\"로보택시\", \"모빌리티\", \"자율주행\", \"라이다\", \"자동차\"],\n",
+    "    [\"임상\", \"백신\", \"식약처\", \"3상\", \"결과발표\", \"모멘텀\"]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- $I(z_{n}^{(d)}=t)$ : document_topic_counts\n",
+    "- $\\sum_{d=1}^{D}\\sum_{n=1}^{N_{d}}I(w_{n}^{(d)}=m)I(z_{n}^{(d)}=t)$ : topic_word_counts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
-    "- 데이터 개수를 count하기 위한 Counter() 함수 사용\n",
-    "- 인덱스를 무시하고 각 문서(document) 별로 Counter() 생성\n",
-    "- 각 문서(Document) 별로 "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# a list of Counters, one for each document\n",
     "document_topic_counts = [Counter() for _ in documents]\n",
     "\n",
-    "# a list of Counters, one for each topic\n",
     "topic_word_counts = [Counter() for _ in range(T)]\n",
     "\n",
-    "# a list of numbers, one for each topic\n",
     "topic_counts = [0 for _ in range(T)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 138,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Counter({3: 3, 1: 0, 2: 5, 0: 0}),\n",
-       " Counter({3: 6, 2: 0, 0: 0, 1: 0}),\n",
-       " Counter({3: 0, 1: 9, 0: 0, 2: 0}),\n",
-       " Counter({2: 7, 3: 0, 0: 0, 1: 0}),\n",
-       " Counter({1: 5, 2: 0, 0: 0, 3: 1}),\n",
-       " Counter({3: 0, 0: 6, 2: 0, 1: 0}),\n",
-       " Counter({0: 5, 1: 0, 2: 0, 3: 0}),\n",
-       " Counter({1: 0, 3: 0, 0: 6, 2: 0}),\n",
-       " Counter({3: 6, 0: 0, 2: 0, 1: 0}),\n",
-       " Counter({0: 0, 3: 0, 2: 0, 1: 6})]"
-      ]
-     },
-     "execution_count": 138,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "document_topic_counts"
    ]
   },
   {
@@ -120,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,87 +166,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def gibbs_sampler_code(d, word, topic) :\n",
-    "    \n",
-    "    ((topic_word_counts[topic][word] + beta) / (topic_counts[topic] + M*beta)) * ((document_topic_counts[d][topic] + alpha))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
     "def topic_weight(d, word, topic):\n",
-    "    \"\"\"given a document and a word in that document,\n",
-    "    return the weight for the kth topic\"\"\"\n",
     "    \n",
-    "    def p_topic_given_document(topic, d, alpha=0.1):\n",
-    "        \"\"\"the fraction of words in document _d_\n",
-    "        that are assigned to _topic_ (plus some smoothing)\"\"\"\n",
-    "        return ((document_topic_counts[d][topic] + alpha))\n",
-    "\n",
-    "    def p_word_given_topic(word, topic, beta=0.1):\n",
-    "        \"\"\"the fraction of words assigned to _topic_\n",
-    "        that equal _word_ (plus some smoothing)\"\"\"\n",
-    "        return ((topic_word_counts[topic][word] + beta) / (topic_counts[topic] + M*beta))\n",
+    "    alpha = 1/T\n",
+    "    beta  = 1/M\n",
     "    \n",
-    "    \n",
-    "    return p_word_given_topic(word, topic) * p_topic_given_document(topic, d)"
+    "    return (document_topic_counts[d][topic]+alpha)*((topic_word_counts[topic][word]+beta)/(topic_counts[topic]+M*beta))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def choose_new_topic(d, word):\n",
+    "def choose_new_topic(d, word) :\n",
+    "    weights = np.zeros(T)\n",
+    "    for topic in range(T) :\n",
+    "        weights[topic] = topic_weight(d, word, topic) \n",
     "    \n",
-    "    def sample_from(weights):\n",
-    "        \"\"\"returns i with probability weights[i] / sum(weights)\"\"\"\n",
-    "        total = sum(weights)\n",
-    "        rnd = total * random.random() # uniform between 0 and total\n",
-    "        for i, p in enumerate(weights):\n",
-    "            rnd -= p # return the smallest i such that\n",
-    "            if rnd <= 0: \n",
-    "                return i # weights[0] + ... + weights[i] >= rnd\n",
-    "        \n",
-    "    return sample_from([topic_weight(d, word, topic) for topic in range(T)])"
+    "    total = weights.sum()\n",
+    "    t = np.argmax(np.random.multinomial(1, pvals = weights/total))\n",
+    "    return t"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 문서에 존재하는 각 단어들에 대해 토픽 할당\n",
+    "- Gibbs Sampling 수행을 위해 각 단어에 대해 토픽 최초값을 임의로 할당"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
-   "metadata": {},
+   "execution_count": 255,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[3, 2, 1, 3, 3, 2, 0, 0],\n",
-       " [0, 1, 3, 0, 2, 1],\n",
-       " [1, 0, 2, 3, 1, 3, 0, 1, 0],\n",
-       " [3, 0, 2, 3, 3, 2, 1],\n",
-       " [3, 0, 2, 0, 1, 2],\n",
-       " [2, 3, 1, 1, 3, 3],\n",
-       " [2, 2, 0, 1, 2],\n",
-       " [0, 1, 1, 2, 2, 3],\n",
-       " [3, 2, 2, 2, 1, 3],\n",
-       " [1, 3, 1, 3, 3, 3]]"
+       "[[2, 0, 3, 1, 3, 1, 1, 2],\n",
+       " [1, 1, 2, 0, 1, 2],\n",
+       " [3, 0, 0, 3, 3, 0, 1, 1, 0],\n",
+       " [1, 0, 2, 0, 0, 0, 2],\n",
+       " [2, 1, 3, 0, 1, 1],\n",
+       " [2, 1, 0, 1, 2, 2],\n",
+       " [3, 2, 0, 2],\n",
+       " [0, 1, 2, 1, 1, 0],\n",
+       " [3, 1, 3, 0, 3, 2],\n",
+       " [1, 1, 1, 1, 0, 3],\n",
+       " [1, 2, 0, 1, 0, 2],\n",
+       " [1, 3, 2, 2, 3],\n",
+       " [2, 2, 0, 0, 2, 3]]"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 255,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,39 +238,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- zip은 두 개의 list의 값을 병렬 추출\n",
+    "- 두 개의 list가 있을 때 각 인덱스에 있는 값들을 뽑아주는 것이 zip\n",
+    "- 문서에 대해 for문을 돌리면서 개수를 Count"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
     "for d in range(D):\n",
     "    for word, topic in zip(documents[d], document_topics[d]):\n",
-    "        document_topic_counts[d][topic] += 1 \n",
-    "        topic_word_counts[topic][word] += 1\n",
-    "        topic_counts[topic] += 1"
+    "        document_topic_counts[d][topic] = document_topic_counts[d][topic] + 1 \n",
+    "        topic_word_counts[topic][word] = topic_word_counts[topic][word] + 1\n",
+    "        topic_counts[topic] = topic_counts[topic] + 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
-   "metadata": {},
+   "execution_count": 257,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Counter({3: 6, 1: 1, 2: 7, 0: 2}),\n",
-       " Counter({3: 7, 2: 1, 0: 2, 1: 2}),\n",
-       " Counter({3: 2, 1: 12, 0: 3, 2: 1}),\n",
-       " Counter({2: 9, 3: 3, 0: 1, 1: 1}),\n",
-       " Counter({1: 6, 2: 2, 0: 2, 3: 2}),\n",
-       " Counter({3: 3, 0: 6, 2: 1, 1: 2}),\n",
-       " Counter({0: 6, 1: 1, 2: 3, 3: 0}),\n",
-       " Counter({1: 2, 3: 1, 0: 7, 2: 2}),\n",
-       " Counter({3: 8, 0: 0, 2: 3, 1: 1}),\n",
-       " Counter({0: 0, 3: 4, 2: 0, 1: 8})]"
+       "[Counter({2: 2, 0: 1, 3: 2, 1: 3}),\n",
+       " Counter({1: 3, 2: 2, 0: 1}),\n",
+       " Counter({3: 3, 0: 4, 1: 2}),\n",
+       " Counter({1: 1, 0: 4, 2: 2}),\n",
+       " Counter({2: 1, 1: 3, 3: 1, 0: 1}),\n",
+       " Counter({2: 3, 1: 2, 0: 1}),\n",
+       " Counter({3: 1, 2: 2, 0: 1}),\n",
+       " Counter({0: 2, 1: 3, 2: 1}),\n",
+       " Counter({3: 3, 1: 1, 0: 1, 2: 1}),\n",
+       " Counter({1: 4, 0: 1, 3: 1}),\n",
+       " Counter({1: 2, 2: 2, 0: 2}),\n",
+       " Counter({1: 1, 3: 2, 2: 2}),\n",
+       " Counter({2: 3, 0: 2, 3: 1})]"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 257,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,11 +295,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for epoch in range(3000): # repetition\n",
+    "for epoch in range(100): # repetition\n",
     "    for d in range(D): # each documnet\n",
     "        for i, (word, topic) in enumerate(zip(documents[d],document_topics[d])):\n",
     "            \n",
@@ -363,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
@@ -409,61 +371,61 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Top1</th>\n",
-       "      <td>5G(6)</td>\n",
-       "      <td>바이오(4)</td>\n",
-       "      <td>비이자(4)</td>\n",
-       "      <td>반도체(4)</td>\n",
+       "      <td>이자(2)</td>\n",
+       "      <td>성장성(3)</td>\n",
+       "      <td>백신(3)</td>\n",
+       "      <td>IPTV(2)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Top2</th>\n",
-       "      <td>통신(4)</td>\n",
-       "      <td>수익성(4)</td>\n",
-       "      <td>대출(4)</td>\n",
-       "      <td>플랫폼(4)</td>\n",
+       "      <td>은행(2)</td>\n",
+       "      <td>반도체(3)</td>\n",
+       "      <td>코로나(3)</td>\n",
+       "      <td>5G(2)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Top3</th>\n",
-       "      <td>IPTV(4)</td>\n",
-       "      <td>공정(4)</td>\n",
-       "      <td>은행(4)</td>\n",
-       "      <td>칩(4)</td>\n",
+       "      <td>대출(2)</td>\n",
+       "      <td>자율주행(3)</td>\n",
+       "      <td>바이오(2)</td>\n",
+       "      <td>이익(2)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Top4</th>\n",
-       "      <td>이익(4)</td>\n",
-       "      <td>코로나(4)</td>\n",
-       "      <td>이자(3)</td>\n",
-       "      <td>성장성(4)</td>\n",
+       "      <td>비이자(2)</td>\n",
+       "      <td>자동차(2)</td>\n",
+       "      <td>수익성(2)</td>\n",
+       "      <td>통신(2)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Top5</th>\n",
-       "      <td>이동통신(2)</td>\n",
-       "      <td>백신(4)</td>\n",
-       "      <td>실적(2)</td>\n",
-       "      <td>자율주행(4)</td>\n",
+       "      <td>증권(1)</td>\n",
+       "      <td>플랫폼(2)</td>\n",
+       "      <td>바이러스(2)</td>\n",
+       "      <td>스마트팩토리(1)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Top6</th>\n",
-       "      <td>스마트팩토리(2)</td>\n",
-       "      <td>바이러스(4)</td>\n",
-       "      <td>증권(2)</td>\n",
-       "      <td>자동차(2)</td>\n",
+       "      <td>Valuation(1)</td>\n",
+       "      <td>공정(2)</td>\n",
+       "      <td>바이오시밀러(1)</td>\n",
+       "      <td>인터넷(1)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Topic1   Topic2  Topic3   Topic4\n",
-       "Top1      5G(6)   바이오(4)  비이자(4)   반도체(4)\n",
-       "Top2      통신(4)   수익성(4)   대출(4)   플랫폼(4)\n",
-       "Top3    IPTV(4)    공정(4)   은행(4)     칩(4)\n",
-       "Top4      이익(4)   코로나(4)   이자(3)   성장성(4)\n",
-       "Top5    이동통신(2)    백신(4)   실적(2)  자율주행(4)\n",
-       "Top6  스마트팩토리(2)  바이러스(4)   증권(2)   자동차(2)"
+       "            Topic1   Topic2     Topic3     Topic4\n",
+       "Top1         이자(2)   성장성(3)      백신(3)    IPTV(2)\n",
+       "Top2         은행(2)   반도체(3)     코로나(3)      5G(2)\n",
+       "Top3         대출(2)  자율주행(3)     바이오(2)      이익(2)\n",
+       "Top4        비이자(2)   자동차(2)     수익성(2)      통신(2)\n",
+       "Top5         증권(1)   플랫폼(2)    바이러스(2)  스마트팩토리(1)\n",
+       "Top6  Valuation(1)    공정(2)  바이오시밀러(1)     인터넷(1)"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 260,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,13 +433,6 @@
    "source": [
     "df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
