--- a/Latent Dirichlet Allocation.ipynb
+++ b/Latent Dirichlet Allocation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,12 +24,13 @@
    "metadata": {},
    "source": [
     "- 토픽의 개수를 미리 결정(T=4) 하고\n",
-    "- 문서(documents) 에 대한 데이터 부여, 원래는 "
+    "- 문서(documents) 에 대한 데이터 부여, 문서에서부터 Parsing해서 데이터를 직접 정제하는 것이 이상적이나 이번 경우 직접 입력하는 방식\n",
+    "- documents 안에는 문서별로 단어 리스트를 입력, 증권사 리포트에서 데이터를 가져옴"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Gibbs Sampling Step"
+    "### Gibbs Sampling Step"
    ]
   },
   {
@@ -166,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,20 +176,19 @@
     "    alpha = 1/T\n",
     "    beta  = 1/M\n",
     "    \n",
-    "    return (document_topic_counts[d][topic]+alpha)*((topic_word_counts[topic][word]+beta)/(topic_counts[topic]+M*beta))"
+    "    return (document_topic_counts[d][topic]+alpha)*((topic_word_counts[topic][word]+beta)/(topic_counts[topic] + M * beta))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
     "def choose_new_topic(d, word) :\n",
     "    weights = np.zeros(T)\n",
     "    for topic in range(T) :\n",
-    "        weights[topic] = topic_weight(d, word, topic) \n",
-    "    \n",
+    "        weights[topic] =topic_weight(d, word, topic)\n",
     "    total = weights.sum()\n",
     "    t = np.argmax(np.random.multinomial(1, pvals = weights/total))\n",
     "    return t"
@@ -204,37 +204,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 119,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[2, 0, 3, 1, 3, 1, 1, 2],\n",
-       " [1, 1, 2, 0, 1, 2],\n",
-       " [3, 0, 0, 3, 3, 0, 1, 1, 0],\n",
-       " [1, 0, 2, 0, 0, 0, 2],\n",
-       " [2, 1, 3, 0, 1, 1],\n",
-       " [2, 1, 0, 1, 2, 2],\n",
-       " [3, 2, 0, 2],\n",
-       " [0, 1, 2, 1, 1, 0],\n",
-       " [3, 1, 3, 0, 3, 2],\n",
-       " [1, 1, 1, 1, 0, 3],\n",
-       " [1, 2, 0, 1, 0, 2],\n",
-       " [1, 3, 2, 2, 3],\n",
-       " [2, 2, 0, 0, 2, 3]]"
-      ]
-     },
-     "execution_count": 255,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "document_topics = [[random.randrange(T) for word in document] for document in documents]\n",
-    "document_topics"
+    "document_topics = [[random.randrange(T) for word in document] for document in documents]"
    ]
   },
   {
@@ -248,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,85 +236,67 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 257,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Counter({2: 2, 0: 1, 3: 2, 1: 3}),\n",
-       " Counter({1: 3, 2: 2, 0: 1}),\n",
-       " Counter({3: 3, 0: 4, 1: 2}),\n",
-       " Counter({1: 1, 0: 4, 2: 2}),\n",
-       " Counter({2: 1, 1: 3, 3: 1, 0: 1}),\n",
-       " Counter({2: 3, 1: 2, 0: 1}),\n",
-       " Counter({3: 1, 2: 2, 0: 1}),\n",
-       " Counter({0: 2, 1: 3, 2: 1}),\n",
-       " Counter({3: 3, 1: 1, 0: 1, 2: 1}),\n",
-       " Counter({1: 4, 0: 1, 3: 1}),\n",
-       " Counter({1: 2, 2: 2, 0: 2}),\n",
-       " Counter({1: 1, 3: 2, 2: 2}),\n",
-       " Counter({2: 3, 0: 2, 3: 1})]"
-      ]
-     },
-     "execution_count": 257,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "document_topic_counts"
+    "- enumerate & zip을 통해서 iteration 별로 documents 별 개별 단어와 그에 대응하는 토픽 할당 정보를 가져옴"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for epoch in range(100): # repetition\n",
+    "for epoch in range(1000): # repetition\n",
     "    for d in range(D): # each documnet\n",
     "        for i, (word, topic) in enumerate(zip(documents[d],document_topics[d])):\n",
     "            \n",
-    "            # gibbs sampling: 특정 하나의 topic assignment z를 제거하고 나머지들(-z)의 조건부 확률  \n",
+    "            ### 각 iteration에서 선택되는 단어에 대한 토픽 정보를 제거한 상태에서 나머지 데이터를 가지고 Posterior 계산 \n",
     "            \n",
-    "            # remove this word / topic from the counts\n",
-    "            # so that it doesn't influence the weights\n",
-    "            document_topic_counts[d][topic] -= 1 # 문서별 토픽 갯수\n",
-    "            topic_word_counts[topic][word] -= 1 # 토픽별 단어 갯수\n",
-    "            topic_counts[topic] -= 1 # 토픽별 카운트\n",
-    "            document_lengths[d] -= 1 # 문서별 단어갯수\n",
+    "            document_topic_counts[d][topic] = document_topic_counts[d][topic] - 1 # 문서 별 토픽 갯수\n",
+    "            topic_word_counts[topic][word] = topic_word_counts[topic][word] - 1 # 토픽 별 단어 갯수\n",
+    "            topic_counts[topic] = topic_counts[topic] - 1 # 토픽 별 횟수 (각 토픽으로 할당된 단어가 몇개인가?)\n",
+    "            document_lengths[d] = document_lengths[d] - 1 # 문서별 단어갯수\n",
     "            \n",
     "            # choose a new topic based on the weights\n",
-    "            new_topic = choose_new_topic(d, word)\n",
-    "            document_topics[d][i] = new_topic\n",
+    "            new_topic = choose_new_topic(d, word) # iteration 에 해당하는 단어에 대한 토픽 할당 \n",
+    "            document_topics[d][i] = new_topic # 새로 할당된 토픽 정보로 데이터 업데이트 처리\n",
     "            \n",
     "            # and now add it back to the counts\n",
-    "            document_topic_counts[d][new_topic] += 1 # 문서별 토픽 갯수\n",
-    "            topic_word_counts[new_topic][word] += 1 # 토픽별 단어 갯수\n",
-    "            topic_counts[new_topic] += 1 # 토픽별 카운트\n",
-    "            document_lengths[d] += 1 # 문서별 단어갯수"
+    "            document_topic_counts[d][new_topic] = document_topic_counts[d][new_topic] + 1 # 문서별 토픽 갯수\n",
+    "            topic_word_counts[new_topic][word] =  topic_word_counts[new_topic][word] + 1 # 토픽 별 단어 갯수\n",
+    "            topic_counts[new_topic] = topic_counts[new_topic] + 1 # 토픽 별 횟수 (각 토픽으로 할당된 단어가 몇개인가?)\n",
+    "            document_lengths[d] = document_lengths[d] + 1 # 문서별 단어갯수"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 토픽 별로 상위 6개 단어에 대한 분포를 확인\n",
+    "- [이자, 비이자, 대출, 은행] 과 같은 단어가 하나의 토픽으로 묶여 Topic 1은 금융회사 관련된 문서로 추정\n",
+    "- [코로나, 백신, 바이러스, 공정, 바이오] 단어가 하나의 토픽으로 묶여 Topic 2는 바이오 관련 문서로 추정\n",
+    "- [5G, 통신 ,IPTV] 등과 같은 단어가 하나의 토픽으로 묶인 결과를 보아 Topic 3는 통신사 관련된 문서로 추정\n",
+    "- [반도체, 자율주행, 칩, 자동차] 단어가 하나의 토픽으로 묶여 Topic 4은 자율주행을 위한 차량용 반도체 관련된 문서로 추정"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.DataFrame(columns=['Topic1','Topic2','Topic3','Topic4'], index=['Top'+str(i) for i in range(1,6)])\n",
     "\n",
     "for k, word_counts in enumerate(topic_word_counts):\n",
-    "    for ix, (word, count) in enumerate(word_counts.most_common(6)): # 각 토픽별로 top 10 단어\n",
-    "            df.loc['Top'+str(ix+1),'Topic'+str(k+1)] = word+'({})'.format(count)"
+    "    for i, (word, count) in enumerate(word_counts.most_common(6)): # 각 토픽별로 top 10 단어\n",
+    "            df.loc['Top'+str(i+1),'Topic'+str(k+1)] = word+'({})'.format(count)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -371,61 +329,61 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Top1</th>\n",
-       "      <td>이자(2)</td>\n",
-       "      <td>성장성(3)</td>\n",
-       "      <td>백신(3)</td>\n",
-       "      <td>IPTV(2)</td>\n",
+       "      <td>은행(2)</td>\n",
+       "      <td>코로나(3)</td>\n",
+       "      <td>이익(2)</td>\n",
+       "      <td>자율주행(3)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Top2</th>\n",
-       "      <td>은행(2)</td>\n",
+       "      <td>이자(2)</td>\n",
+       "      <td>백신(3)</td>\n",
+       "      <td>IPTV(2)</td>\n",
        "      <td>반도체(3)</td>\n",
-       "      <td>코로나(3)</td>\n",
-       "      <td>5G(2)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Top3</th>\n",
-       "      <td>대출(2)</td>\n",
-       "      <td>자율주행(3)</td>\n",
-       "      <td>바이오(2)</td>\n",
-       "      <td>이익(2)</td>\n",
+       "      <td>통신(2)</td>\n",
+       "      <td>수익성(2)</td>\n",
+       "      <td>5G(2)</td>\n",
+       "      <td>자동차(2)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Top4</th>\n",
        "      <td>비이자(2)</td>\n",
-       "      <td>자동차(2)</td>\n",
-       "      <td>수익성(2)</td>\n",
-       "      <td>통신(2)</td>\n",
+       "      <td>공정(2)</td>\n",
+       "      <td>플랫폼(2)</td>\n",
+       "      <td>칩(2)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Top5</th>\n",
+       "      <td>대출(2)</td>\n",
+       "      <td>바이오(2)</td>\n",
        "      <td>증권(1)</td>\n",
-       "      <td>플랫폼(2)</td>\n",
-       "      <td>바이러스(2)</td>\n",
-       "      <td>스마트팩토리(1)</td>\n",
+       "      <td>당기순이익(1)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Top6</th>\n",
-       "      <td>Valuation(1)</td>\n",
-       "      <td>공정(2)</td>\n",
-       "      <td>바이오시밀러(1)</td>\n",
-       "      <td>인터넷(1)</td>\n",
+       "      <td>성장성(2)</td>\n",
+       "      <td>바이러스(2)</td>\n",
+       "      <td>커머스(1)</td>\n",
+       "      <td>스마트팩토리(1)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Topic1   Topic2     Topic3     Topic4\n",
-       "Top1         이자(2)   성장성(3)      백신(3)    IPTV(2)\n",
-       "Top2         은행(2)   반도체(3)     코로나(3)      5G(2)\n",
-       "Top3         대출(2)  자율주행(3)     바이오(2)      이익(2)\n",
-       "Top4        비이자(2)   자동차(2)     수익성(2)      통신(2)\n",
-       "Top5         증권(1)   플랫폼(2)    바이러스(2)  스마트팩토리(1)\n",
-       "Top6  Valuation(1)    공정(2)  바이오시밀러(1)     인터넷(1)"
+       "      Topic1   Topic2   Topic3     Topic4\n",
+       "Top1   은행(2)   코로나(3)    이익(2)    자율주행(3)\n",
+       "Top2   이자(2)    백신(3)  IPTV(2)     반도체(3)\n",
+       "Top3   통신(2)   수익성(2)    5G(2)     자동차(2)\n",
+       "Top4  비이자(2)    공정(2)   플랫폼(2)       칩(2)\n",
+       "Top5   대출(2)   바이오(2)    증권(1)   당기순이익(1)\n",
+       "Top6  성장성(2)  바이러스(2)   커머스(1)  스마트팩토리(1)"
       ]
      },
-     "execution_count": 260,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
