--- a/Latent Dirichlet Allocation.ipynb
+++ b/Latent Dirichlet Allocation.ipynb
@@ -162,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$ p(z_{n}^{(d)}=t \\vert z_{-n}^{(d)},\\mathbf{w},\\alpha,\\beta) \\propto \\frac{ \\beta_{m}+\\sum_{d=1}^{D}\\sum_{n=1}^{N_{d}}I(w_{n}^{(d)}=m)I(z_{n}^{(d)}=t)}{ \\sum_{m=1}^{M}\\left(\\beta_{m}+\\sum_{d=1}^{D}\\sum_{n=1}^{N_{d}}I(w_{n}^{(d)}=m)I(z_{n}^{(d)}=t) \\right) } \\times \\left( \\alpha_{t}+ \\sum_{n=1}^{N_{d}} I(z_{n}^{(d)}=t) \\right) $"
+    "$ p(z_{n}^{(d)}=t \\vert z_{-n}^{(d)},\\mathbf{w},\\alpha,\\beta) \\propto \\frac{ \\beta_{m}+ \\sum_{d=1}^{D}\\sum_{n=1}^{N_{d}}I(w_{-n}^{(d)}=m)I(z_{-n}^{(d)}=t)  }{  \\sum_{m=1}^{M} \\left( \\beta_{m}+ \\sum_{d=1}^{D}\\sum_{n=1}^{N_{d}}I(w_{-n}^{(d)}=m)I(z_{-n}^{(d)}=t) \\right) } \\times \\left( \\alpha_{t}+\\sum_{n=1}^{N_{d}}I(z_{-n}^{(d)}=t) \\right) $"
    ]
   },
   {
