--- a/TEST_PREPARE_CHAP1.ipynb
+++ b/TEST_PREPARE_CHAP1.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\seolbluewings\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\pandas\\compat\\_optional.py:138: UserWarning: Pandas requires version '2.7.0' or newer of 'numexpr' (version '2.6.9' currently installed).\n",
+      "  warnings.warn(msg, UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -25,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +409,7 @@
        "4    46      33      N        E      805       40       4    91.5         N  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +602,7 @@
        "4   0.31     Good     J     SI2   63.3   58.0    335  4.34  4.35"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,6 +845,174 @@
     "Hitters_new = Hitters[Hitters['CHmRun']>=10]\n",
     "Hitters_new[['CHmRun','CRuns']].corr(method = 'pearson')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### mtcars 데이터셋\n",
+    "- am = 1 에서 wt 가 작게 나가는 10개 데이터의 mpg 평균\n",
+    "- am = 0 에서 wt 가 작게 나가는 10개 데이터의 mpg 평균"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"C://Users/seolbluewings/Desktop/sample/mtcars.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-7.07"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[df['am']==0,[\"mpg\",\"wt\"]].sort_values(by = \"wt\", ascending = True).head(10).mean()['mpg'] - df.loc[df['am']==1,[\"mpg\",\"wt\"]].sort_values(by = \"wt\", ascending = True).head(10).mean()['mpg']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 4기통(cyl = 4)인 자동차의 백분율을 구하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mtcars = pd.read_csv(\"C://Users/seolbluewings/Desktop/sample/mtcars.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.34375"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mtcars.loc[df['cyl'] == 4,\"am\"].count() / len(mtcars)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 변속기어수(gear) 가 4이고 수동 변속기(am) 1 인 데이터에서\n",
+    "- 자동차 연비(mpg)의 mean 값과 전체 마력(hp)의 표준편차 합계 구하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50.44958819268106"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mtcars.loc[(mtcars['gear'] == 4) & (mtcars['am'] == 1),\"mpg\"].mean() + mtcars.loc[(mtcars['gear'] == 4) & (mtcars['am'] == 1),\"hp\"].std()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Diamonds 데이터\n",
+    "- 순서대로 80% 를 제거하고 \n",
+    "- cut 이 Fair 이면서 carat이 1 이상인 diamonds의 price 최대값"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2745"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = diamonds.iloc[int(len(diamonds)*0.8):,:]\n",
+    "df.loc[(df['cut'] == 'Fair') & (df['carat']>=1),\"price\"].max()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Airquality\n",
+    "- 8월 21일의 Ozone 값을 구하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "112    21.0\n",
+       "Name: Ozone, dtype: float64"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "airquality.loc[(airquality['Month'] == 8) & (airquality['Day'] == 21), \"Ozone\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
