--- a/Python Class.ipynb
+++ b/Python Class.ipynb
@@ -175,15 +175,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "class AttackUnit:\n",
+    "    \n",
+    "    count = 0\n",
+    "        \n",
     "    def __init__(self, name, hp, damage) :\n",
     "        self.name = name\n",
     "        self.hp = hp\n",
     "        self.damage = damage\n",
+    "        AttackUnit.count += 1\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def unit_count(cls) :\n",
+    "        print(\"유닛이 {}개 생성되었습니다\".format(cls.count))\n",
     "    \n",
     "    def attack(self, location) :\n",
     "        print(\"{0} : {1} 방향으로 적군을 공격 합니다. [공격력 {2}]\".format(self.name, location, self.damage))\n",
@@ -198,28 +206,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "유닛이 2개 생성되었습니다\n",
       "firebat : 5시 방향으로 적군을 공격 합니다. [공격력 16]\n",
       "firebat : 25 데미지를 입었습니다.\n",
-      "firebat : 현재 체력은 25 입니다.\n",
-      "firebat : 30 데미지를 입었습니다.\n",
-      "firebat : 현재 체력은 -5 입니다.\n",
-      "firebat : 유닛이 파괴되었습니다.\n"
+      "firebat : 현재 체력은 25 입니다.\n"
      ]
     }
    ],
    "source": [
     "firebat1 = AttackUnit(\"firebat\",50,16)\n",
+    "AttackUnit.unit_count()\n",
     "firebat1.attack(\"5시\")\n",
-    "firebat1.damaged(25)\n",
-    "firebat1.damaged(30)"
+    "firebat1.damaged(25)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 상속, 다중상속\n",
+    "- Unit, AttackUnit 에서 self.name, self.hp는 동등\n",
+    "- Unit 클래스를 상속받아 AttackUnit이란 클래스를 만드는 것으로 코드 변경"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Unit :\n",
+    "    def __init__(self, name, hp) :\n",
+    "        self.name = name\n",
+    "        self.hp = hp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class AttackUnit(Unit) :\n",
+    "        \n",
+    "    def __init__(self, name, hp, damage) :\n",
+    "        Unit.__init__(self,name,hp)\n",
+    "        self.damage = damage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
